<resources>
	<!--do not translate these-->
    <string name="wifi_settings_key">wifi setting</string>
    <string name="sync_frequency_settings_key">update frequency setting</string>
    <string name="preferred_currency_key">preferred currency</string>
    <string-array name="frequency_interval_keys">
        <item>none</item>
        <item>fifteen_minutes</item>
        <item>thirty_minutes</item>
        <item>one_hour</item>
        <item>one_day</item>
    </string-array>
    <!--to be synced with Currency enum-->
    <string-array name="preferred_currencies_keys">
        <item>AUD</item>
        <item>ALL</item>
        <item>ARS</item>
        <item>CAD</item>
        <item>DZD</item>
        <item>GBP</item>
        <item>IRR</item>
        <item>USD</item>
    </string-array>
    <!---->
    <string name="app_name">Currency Converter</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="update_date">Updated at %1$s</string>
    <string name="download_data">Download Latest Data</string>
    <string name="delete_data">Delete old data</string>
    <string name="confirmation_delete_title">Confirm delete</string>
    <string name="confirmation_delete_text">Are you sure you want to delete?</string>
    <string name="settings">Settings</string>

    <string name="wifi_setting_title">WiFi</string>
    <string name="wifi_setting_summary">Download only when WiFi is available.</string>
    <string name="download_category_title">Download Settings</string>
    <string name="sync_freq_setting_title">Update Frequency</string>
    <string-array name="frequency_interval_title">
        <item>None</item>
        <item>Every 15 Minutes</item>
        <item>Every 30 Minutes</item>
        <item>Every 1 Hour</item>
        <item>Every 1 Day</item>
    </string-array>
    <!--to be synced with Currency enum-->
    <string-array name="preferred_currencies_title">
        <item>Australian Dollar</item>
        <item>Albanian Lek</item>
        <item>Argentine Peso</item>
        <item>Canadian Dollar</item>
        <item>Algerian Dinar</item>
        <item>British Pound</item>
        <item>Iran Rial</item>
        <item>United States Dollar</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_value">Enter value</string>
    <string name="default_conversion_input">1.00</string>
    <string name="chart_error_same_currency">Please select different currencies for chart.</string>
    <string name="chart_no_internet_error">No internet connection is available.</string>
    <string name="preferred_currency_setting_title">Preferred currency</string>
    <string name="set_up_rate_alert">Set up rate alert</string>
    <string name="pick">Pick</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="current_value">Current Rate</string>
    <string name="desired_value">Desired Rate</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="rate_error_message">There is an error with the provided values!</string>
    <string name="rate_desired_error_message">Desired rate cannot be negative or zero!</string>
    <string name="rate_alert_success_save">Successfully saved alert.</string>
    <string name="settings_title">Settings</string>
    <string name="rate_alert_notification_text">Exchange rate of %1$s to %2$s is %3$f (%4$s %5$f)</string>
    <string name="below">less than</string>
    <string name="above">more than</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="share_rate_text">Exchange rate of %1$s to %2$s is %3$f</string>
    <string name="share_rate_subject">Rate from Currency Converter</string>
    <string name="send_to">Send To</string>
    <string name="share_app_text">Hi! I have been using Currency Converter App and quite like it! You should check it out.</string>
    <string name="share_app_subject">My favourite currency app!</string>
    <string name="credit_dialog_title">Credit</string>
    <string name="credit_dialog_text">\tLauncher icon made by Vectors Market from www.flaticon.com\n
    \tCountry flags made by Freepik from www.flaticon.com\n
        \tCurrency conversion charts taken from www.xe.com\n
        \tCurrency data taken from rss feeds at fxexchangerate.com\n
    </string>
    <string name="no_internet_error">No internet connection is available.</string>
    <string name="download_over_mobile_error">No download with mobile network is allowed. Check settings.</string>
</resources>
