<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_setup_rate_alert"
            android:icon="@drawable/alert_icon"
            android:title="@string/set_up_rate_alert" />
        <item
            android:id="@+id/menu_show_credit"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/menu_share_app"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
