<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/from" />

            <Spinner
                android:id="@+id/spinner_from_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/pick"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/to" />

            <Spinner
                android:id="@+id/spinner_to_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/pick"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_value"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/tv_current_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desired_value" />

            <EditText
                android:id="@+id/et_desired_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_value"
                android:inputType="numberDecimal"
                android:paddingStart="10dp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_trend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notify when rate:" />

            <RadioButton
                android:id="@+id/rdBtn_falls_bellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Falls bellow desired value" />

            <RadioButton
                android:id="@+id/rdBtn_goes_above"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goes above desired value" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_save_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:background="@color/colorSave"
                android:text="@string/save"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_cancel_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@color/colorCancel"
                android:textColor="@android:color/white"
                android:text="@android:string/cancel" />
        </RelativeLayout>


    </LinearLayout>

</ScrollView>